--- a/src/components/Editor/EditorToggle.css
+++ b/src/components/Editor/EditorToggle.css
@@ -7,10 +7,15 @@
   width: 40px;
   height: 40px;
   padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   margin-bottom: 12px;
+
+  & .nc-icon {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .nc-editor-toggleActive {
